--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:hint="아이디"
+        android:maxLines="1"
+        android:singleLine="true"
         />
     <EditText
         android:id="@+id/login_pass"
@@ -38,19 +40,25 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:hint="비밀번호"
+        android:maxLines="1"
+        android:singleLine="true"
         />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/login_loginbtn"
+            android:layout_width="340dp"
+            android:layout_height="50dp"
+            android:text="로그인"
+            android:textColor="@color/opposite"
+            android:background="@drawable/register_button"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="20dp"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:elevation="10dp"/>
+    </FrameLayout>
 
-    <Button
-        android:id="@+id/login_loginbtn"
-        android:layout_width="340dp"
-        android:layout_height="50dp"
-        android:text="로그인"
-        android:textColor="@color/opposite"
-        android:background="@drawable/register_button"
-        android:layout_gravity="center"
-        android:layout_marginTop="410dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:elevation="10dp"/>
 
 </LinearLayout>
