--- a/app/src/main/res/layout/activity_register_id.xml
+++ b/app/src/main/res/layout/activity_register_id.xml
@@ -25,6 +25,8 @@
         />
     <EditText
         android:id="@+id/gainid"
+        android:maxLines="1"
+        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -47,18 +49,22 @@
             android:layout_marginLeft="5dp"
             android:text="숫자나 문자"/>
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/id_nextbtn"
+            android:layout_width="340dp"
+            android:layout_height="50dp"
+            android:text="다음"
+            android:textColor="@color/opposite"
+            android:background="@drawable/register_button"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:elevation="10dp"/>
+    </FrameLayout>
 
-    <Button
-        android:id="@+id/id_nextbtn"
-        android:layout_width="340dp"
-        android:layout_height="50dp"
-        android:text="다음"
-        android:textColor="@color/opposite"
-        android:background="@drawable/register_button"
-        android:layout_gravity="center"
-        android:layout_marginTop="460dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:elevation="10dp"/>
 
 </LinearLayout>
