--- a/app/src/main/res/layout/activity_register_password.xml
+++ b/app/src/main/res/layout/activity_register_password.xml
@@ -30,6 +30,8 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:inputType="textPassword"
+        android:maxLines="1"
+        android:singleLine="true"
         />
     <LinearLayout
         android:layout_width="wrap_content"
@@ -70,18 +72,22 @@
             android:text="조합"
             android:textColor="#808080"/>
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/pass_nextbtn"
+            android:layout_width="340dp"
+            android:layout_height="50dp"
+            android:text="완료하기"
+            android:textColor="@color/opposite"
+            android:background="@drawable/register_button"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="20dp"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:elevation="10dp"/>
+    </FrameLayout>
 
-    <Button
-        android:id="@+id/pass_nextbtn"
-        android:layout_width="340dp"
-        android:layout_height="50dp"
-        android:text="완료하기"
-        android:textColor="@color/opposite"
-        android:background="@drawable/register_button"
-        android:layout_gravity="center"
-        android:layout_marginTop="460dp"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        android:elevation="10dp"/>
 
 </LinearLayout>
