--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -35,7 +35,7 @@
         android:id="@+id/login_button"
         android:text="로그인"
         android:textSize="16dp"
-        android:textColor="@color/white"
+        android:textColor="@color/opposite"
         android:textStyle="bold"
         android:layout_width="340dp"
         android:layout_height="50dp"
@@ -44,7 +44,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="10dp"
-        android:elevation="10dp"
         />
 
     <TextView
@@ -76,12 +75,11 @@
         android:layout_marginBottom="20dp"
         android:background="@drawable/register_button"
         android:text="회원가입"
-        android:textColor="@color/white"
+        android:textColor="@color/opposite"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:elevation="10dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
